--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/qrcode": "^1.4.2",
     "typescript": "^4.4.4",
     "vite": "^2.7.2"
+  },
+  "dependencies": {
+    "qrcode": "^1.5.0"
   }
 }
